# shell-from-scratch-cpp

./: CMakeLists.txt  README.md  file.txt  h.txt  me.txt
bilal/me/: file.txt
src/: Executor.hpp  Parser.hpp  Terminal.hpp  \  app  main.cpp  str.h
src/helpers/: file_helpers.hpp  helper.hpp
src/tests/: base_tests.hpp  parser_tests.hpp
